--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-native-scripts": "1.13.1",
     "jest-expo": "26.0.0",
-    "react-test-renderer": "16.3.0-alpha.1",
-    "react-native-debugger-open": "^0.3.17"
+    "react-devtools": "^3.2.1",
+    "react-native-debugger-open": "^0.3.17",
+    "react-native-scripts": "1.13.1",
+    "react-test-renderer": "16.3.0-alpha.1"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
